 * Adding an mpm check so that mod_http2 also compiles against Apache httpd trunk.

v1.11.3
--------------------------------------------------------------------------------
 * Adding defensive code for stream EOS handling, in case the request handler somehow
   missed to signal it the normal way. Should address #167 and #170. 
 
v1.11.2
--------------------------------------------------------------------------------
 * Fixed configure to no longer require ```libcurl-devel```, but only the ```curl```
   command with h2 support for testing.

v1.11.1
--------------------------------------------------------------------------------
 * added test/Makefile.in to the release tar ball, so that peopl just need
   automake to build (reported in #169 by @uhliarik, fix proposed by @notroj)
 * added  -avoid-version to the linker flags (thanks to Oden Erikson, @odeneriksson)
 * added tests for 100 interim responses
 * added tests for trailers
 * added tests for conditional request header
 * added tests for invalid characters in response header
 * added Upgrade: response header tests
 * added vars require configuration tests
 * added ssl renegotiation tests

v1.11.0
--------------------------------------------------------------------------------
 * connection IO event handling reworked. Instead of reacting on incoming bytes, the
   state machine now acts on incoming frames that are affecting it. This reduces
   state transitions.
 * pytest suite now covers some basic tests on h2 selection, GET and POST
 * started to add pytest suite from existing bash tests

v1.10.21
--------------------------------------------------------------------------------
 * Code cleanups from Apache subversion
 * New optional function to query the number of h2 workers from Apache branch

v1.10.20
--------------------------------------------------------------------------------
 * Restore keepalive handling of v1.10.16. Idle connections are kept open
   for the duration.

v1.10.19